--- a/PROYECTO_RAMOS/css/styles.css
+++ b/PROYECTO_RAMOS/css/styles.css
@@ -212,7 +212,7 @@ body {
     width: 50%;
     background-image: url("../img/image4.webp");
     background-size: cover;
-    position: center center;
+    background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
 }
