--- a/PROYECTO_RAMOS/css/styles.css
+++ b/PROYECTO_RAMOS/css/styles.css
@@ -14,6 +14,7 @@
     width: 100%;
     height: 100px;
     position: fixed;
+    z-index: 10000;
 }
 
 .logo {
@@ -266,6 +267,17 @@
     padding-bottom: 50px;
     background-color: white;
 }
+
+#proyectos {
+    width: 60%;
+    margin: 0 auto;
+    margin-top: 4em;
+}
+
+.bxslider div img{
+    width: 100%;
+}
+/* 
 #proyectos {
     width: 60%;
     margin: 0 auto;
@@ -289,7 +301,7 @@
 .proyecto img {
     width: 100%;
     height: auto;
-}
+} */
 
 /* Inicio Empresas */
 #clientes {
@@ -425,7 +437,6 @@ a:hover .redes_sociales img {
 
 .whatsapp:hover {
     box-shadow: 0px 0px 20px rgb(111, 180, 19);
-    width: 68px;
 }
 
 /* Footer */
