--- a/PROYECTO_RAMOS/css/styles.css
+++ b/PROYECTO_RAMOS/css/styles.css
@@ -74,7 +74,11 @@
 
 /* Inicio video */
 #ParallaxVideo{ 
-    height: 100vh;
+    height: 50em;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 
 #ParallaxVideo video{ 
@@ -85,8 +89,6 @@
 }
 
 .text_inicio {
-    margin: 0 auto;
-    margin-top: 35vh;
     padding: 18px;
     width: 60%;
     height: 300px;
@@ -95,7 +97,8 @@
     letter-spacing: 0.04em;
     text-shadow: 0px 1px 4px black;
     color: #FFFFFF;
-} 
+}
+
 
 
 /* Inicio Servicios */
@@ -225,17 +228,24 @@
 /* Inicio Recorrido */
 
 #recorrido {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
     width: 100%;
     height: 250px;
     background-color: #EDCD1F;
 }
 
+#recorrido .emboltura {
+    margin: 0 auto;
+    width: 65%;
+    height: 250px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
 .caja_principal {
-    width: 15%;
+    width: 25%;
     height: 140px;
 }
 
@@ -257,7 +267,6 @@
 .barra_vertical {
     width: 2px;
     height: 71px;
-    margin: 0 15px;
     background-color: #FFFFFF;
 }
 
@@ -277,31 +286,6 @@
 .bxslider div img{
     width: 100%;
 }
-/* 
-#proyectos {
-    width: 60%;
-    margin: 0 auto;
-}
-
-.cajas_proyectos {
-    margin-top: 50px;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-
-.proyecto {
-    display: block;
-    width: 49%;
-    margin-top: 10px;
-}
-
-.proyecto img {
-    width: 100%;
-    height: auto;
-} */
 
 /* Inicio Empresas */
 #clientes {
@@ -437,6 +421,10 @@ a:hover .redes_sociales img {
 
 .whatsapp:hover {
     box-shadow: 0px 0px 20px rgb(111, 180, 19);
+}
+
+#fb-root:hover {
+    box-shadow: 0px 0px 20px rgb(34, 113, 233); 
 }
 
 /* Footer */
