--- a/PROYECTO_RAMOS/css/responsive.css
+++ b/PROYECTO_RAMOS/css/responsive.css
@@ -1,3 +1,9 @@
+@media (max-width: 2500px) {
+    #inicio{
+        display: none;
+    }
+}
+
 @media (max-width: 1100px) {
     .caja_principal > h2 {
         font-size: 2.7em;
