--- a/PROYECTO_RAMOS/css/responsive.css
+++ b/PROYECTO_RAMOS/css/responsive.css
@@ -141,6 +141,10 @@
 
 @media (max-width: 600px) {
     /* Cabecera */
+    #inicio {
+        display: flex;
+    }
+
     .logo {
         width: 100%;
         justify-content: start;
