--- a/PROYECTO_RAMOS/css/responsive.css
+++ b/PROYECTO_RAMOS/css/responsive.css
@@ -145,8 +145,13 @@
         display: flex;
     }
 
+    #cabecera {
+        flex-direction: column;
+    }
+
     .logo {
         width: 100%;
+        height: 100px;
         justify-content: start;
     }
 
@@ -158,7 +163,7 @@
         margin-top: 6px;
     }
 
-    .barras {
+    #mostrar-nav {
         position: absolute;
         top: 37px;
         right: 30px;
@@ -168,8 +173,39 @@
         background-image: url(../img/barras.svg)
     }
 
-    .menu {
-        display: none;
+    .mostrar {
+        left: 0%; 
+    }
+
+    nav {
+        left: -100%;
+        position: absolute;
+        z-index: -1;
+        width: 100%;
+        height: 100vh;
+        background-color: #EDCD1F;
+        transition: all 300ms;
+    }
+
+    nav > ul {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+        margin-right: 0px;
+        height: 100%;
+        list-style: none;
+    }
+    
+    nav > ul > li > a {
+        font-size: 2em;
+        padding: 10px;
+    }
+
+    nav > ul > li:hover > a {
+        font-size: 1.5em;
+        color: rgb(17, 17, 16);
     }
 
 
@@ -269,6 +305,7 @@
     .nosotrosB {
         width: 100%;
         height: 200px;
+        background-attachment: local;
     }
 
     /* Inicio recorrido */
